--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/watch-classic-logo-icon-design-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Watch</title>
+    <title>MvMt</title>
   </head>
   <body>
     <div id="root"></div>
